force-app/main/default/objects/maps__Click2Create__c/maps__Click2Create__c.object-meta.xml
<CustomObject>
    <label>Maps Click-2-Create Setting</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Click-2-Create Setting</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Maps Click-2-Create Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>