force-app/main/default/objects/maps__Click2Create__c/fields/maps__DefaultField__c.field-meta.xml
<CustomField>
    <fullName>maps__DefaultField__c</fullName>
    <label>Default Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>