force-app/main/default/objects/maps__Click2Create__c/fields/maps__MapClickCity__c.field-meta.xml
<CustomField>
    <fullName>maps__MapClickCity__c</fullName>
    <label>Map Click City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>