force-app/main/default/objects/maps__Click2Create__c/fields/maps__MapClickCountry__c.field-meta.xml
<CustomField>
    <fullName>maps__MapClickCountry__c</fullName>
    <label>Map Click Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>