force-app/main/default/objects/maps__Click2Create__c/fields/maps__MapClickDefaultValue__c.field-meta.xml
<CustomField>
    <fullName>maps__MapClickDefaultValue__c</fullName>
    <label>Map Click Default Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>