force-app/main/default/objects/maps__Click2Create__c/fields/maps__MapClickEnabled__c.field-meta.xml
<CustomField>
    <fullName>maps__MapClickEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Map Click Enabled</label>
    <type>Checkbox</type>
</CustomField>