force-app/main/default/objects/maps__Click2Create__c/fields/maps__MapClickLatitude__c.field-meta.xml
<CustomField>
    <fullName>maps__MapClickLatitude__c</fullName>
    <label>Map Click Latitude</label>
    <length>255</length>
    <type>Text</type>
</CustomField>