force-app/main/default/objects/maps__Click2Create__c/fields/maps__MapClickLongitude__c.field-meta.xml
<CustomField>
    <fullName>maps__MapClickLongitude__c</fullName>
    <label>Map Click Longitude</label>
    <length>255</length>
    <type>Text</type>
</CustomField>