force-app/main/default/objects/maps__Click2Create__c/fields/maps__MapClickName__c.field-meta.xml
<CustomField>
    <fullName>maps__MapClickName__c</fullName>
    <label>Map Click Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>