force-app/main/default/objects/maps__Click2Create__c/fields/maps__MapClickPostalCode__c.field-meta.xml
<CustomField>
    <fullName>maps__MapClickPostalCode__c</fullName>
    <label>Map Click Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>