force-app/main/default/objects/maps__Click2Create__c/fields/maps__MapClickState__c.field-meta.xml
<CustomField>
    <fullName>maps__MapClickState__c</fullName>
    <label>Map Click State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>