force-app/main/default/objects/maps__Click2Create__c/fields/maps__MapClickStreet__c.field-meta.xml
<CustomField>
    <fullName>maps__MapClickStreet__c</fullName>
    <label>Map Click Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>