force-app/main/default/objects/maps__Click2Create__c/fields/maps__MyPositionCity__c.field-meta.xml
<CustomField>
    <fullName>maps__MyPositionCity__c</fullName>
    <label>My Position City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>