force-app/main/default/objects/maps__Click2Create__c/fields/maps__MyPositionEnabled__c.field-meta.xml
<CustomField>
    <fullName>maps__MyPositionEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>My Position Enabled</label>
    <type>Checkbox</type>
</CustomField>