force-app/main/default/objects/maps__Click2Create__c/fields/maps__MyPositionLatitude__c.field-meta.xml
<CustomField>
    <fullName>maps__MyPositionLatitude__c</fullName>
    <label>My Position Latitude</label>
    <length>255</length>
    <type>Text</type>
</CustomField>