force-app/main/default/objects/maps__Click2Create__c/fields/maps__MyPositionLongitude__c.field-meta.xml
<CustomField>
    <fullName>maps__MyPositionLongitude__c</fullName>
    <label>My Position Longitude</label>
    <length>255</length>
    <type>Text</type>
</CustomField>