force-app/main/default/objects/maps__Click2Create__c/fields/maps__MyPositionPostalCode__c.field-meta.xml
<CustomField>
    <fullName>maps__MyPositionPostalCode__c</fullName>
    <label>My Position Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>