force-app/main/default/objects/maps__Click2Create__c/fields/maps__MyPositionState__c.field-meta.xml
<CustomField>
    <fullName>maps__MyPositionState__c</fullName>
    <label>My Position State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>