force-app/main/default/objects/maps__Click2Create__c/fields/maps__MyPositionStreet__c.field-meta.xml
<CustomField>
    <fullName>maps__MyPositionStreet__c</fullName>
    <label>My Position Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>