force-app/main/default/objects/maps__Click2Create__c/fields/maps__ObjectAPIName__c.field-meta.xml
<CustomField>
    <fullName>maps__ObjectAPIName__c</fullName>
    <label>Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>