force-app/main/default/objects/maps__Click2Create__c/fields/maps__POICity__c.field-meta.xml
<CustomField>
    <fullName>maps__POICity__c</fullName>
    <label>POI City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>