force-app/main/default/objects/maps__Click2Create__c/fields/maps__POICountry__c.field-meta.xml
<CustomField>
    <fullName>maps__POICountry__c</fullName>
    <label>POI Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>