force-app/main/default/objects/maps__Click2Create__c/fields/maps__POICountryShort__c.field-meta.xml
<CustomField>
    <fullName>maps__POICountryShort__c</fullName>
    <label>POI Country Short</label>
    <length>255</length>
    <type>Text</type>
</CustomField>