force-app/main/default/objects/maps__Click2Create__c/fields/maps__POIDefaultValue__c.field-meta.xml
<CustomField>
    <fullName>maps__POIDefaultValue__c</fullName>
    <label>POI Default Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>