force-app/main/default/objects/maps__Click2Create__c/fields/maps__POIEnabled__c.field-meta.xml
<CustomField>
    <fullName>maps__POIEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>POI Enabled</label>
    <type>Checkbox</type>
</CustomField>