force-app/main/default/objects/maps__Click2Create__c/fields/maps__POIFieldSet__c.field-meta.xml
<CustomField>
    <fullName>maps__POIFieldSet__c</fullName>
    <inlineHelpText>Developer/API Name of Field Set</inlineHelpText>
    <label>POI Field Set</label>
    <length>255</length>
    <type>Text</type>
</CustomField>