force-app/main/default/objects/maps__Click2Create__c/fields/maps__POILatitude__c.field-meta.xml
<CustomField>
    <fullName>maps__POILatitude__c</fullName>
    <label>POI Latitude</label>
    <length>255</length>
    <type>Text</type>
</CustomField>