force-app/main/default/objects/maps__Click2Create__c/fields/maps__POIName__c.field-meta.xml
<CustomField>
    <fullName>maps__POIName__c</fullName>
    <label>POI Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>