force-app/main/default/objects/maps__Click2Create__c/fields/maps__POIPhone__c.field-meta.xml
<CustomField>
    <fullName>maps__POIPhone__c</fullName>
    <label>POI Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>