force-app/main/default/objects/maps__Click2Create__c/fields/maps__POIPostalCode__c.field-meta.xml
<CustomField>
    <fullName>maps__POIPostalCode__c</fullName>
    <label>POI Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>