force-app/main/default/objects/maps__Click2Create__c/fields/maps__POIState__c.field-meta.xml
<CustomField>
    <fullName>maps__POIState__c</fullName>
    <label>POI State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>