force-app/main/default/objects/maps__Click2Create__c/fields/maps__POIStateShort__c.field-meta.xml
<CustomField>
    <fullName>maps__POIStateShort__c</fullName>
    <label>POI State Short</label>
    <length>255</length>
    <type>Text</type>
</CustomField>