force-app/main/default/objects/maps__Click2Create__c/fields/maps__POIStreet__c.field-meta.xml
<CustomField>
    <fullName>maps__POIStreet__c</fullName>
    <label>POI Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>