force-app/main/default/objects/maps__Click2Create__c/fields/maps__POIWebsite__c.field-meta.xml
<CustomField>
    <fullName>maps__POIWebsite__c</fullName>
    <label>POI Website</label>
    <length>255</length>
    <type>Text</type>
</CustomField>